Run tests with java 21 (#13)
* Run tests with java 21

* Make sure to run maven using java 21

* Bump jacoco version

* Bump asm version to be able to handle java 21 bytecode

* Include summary on tests

* Bump eclipse-link version to be compatible with java 21

* Skip scala assertion

---------

Co-authored-by: Marvin Froeder <velobr@gmail.com>