@@ -43,7 +43,7 @@
 
     <!-- default bytecode version for src/main -->
     <main.java.version>1.8</main.java.version>
-    <latest.java.version>11</latest.java.version>
+    <latest.java.version>21</latest.java.version>
 
     <!-- SQL deps -->
     <db2.version>11.5.5.0</db2.version>
@@ -62,7 +62,7 @@
     <!-- JPA deps -->
     <hibernate.version>5.4.8.Final</hibernate.version>
     <hibernate.validator.version>7.0.1.Final</hibernate.validator.version>
-    <eclipselink.version>2.7.8</eclipselink.version>
+    <eclipselink.version>2.7.13</eclipselink.version>
 
     <guava.version>32.0.0-jre</guava.version>
     <codegen.version>0.6.8</codegen.version>
@@ -254,6 +254,13 @@
         <artifactId>jboss-logging</artifactId>
         <version>3.4.2.Final</version>
       </dependency>
+      <dependency>
+        <groupId>org.ow2.asm</groupId>
+        <artifactId>asm-bom</artifactId>
+        <version>9.6</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -329,6 +336,12 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${surefire.version}</version>
+          <configuration>
+            <jdkToolchain>
+              <version>${latest.java.version}</version>
+            </jdkToolchain>
+            <argLine>--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.management/javax.management=ALL-UNNAMED --add-opens=java.naming/javax.naming=ALL-UNNAMED</argLine>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.felix</groupId>
@@ -522,7 +535,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.7</version>
+        <version>0.8.11</version>
         <executions>
           <execution>
             <id>prepare-agent</id>
@@ -679,27 +692,6 @@
         </dependencies>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>animal-sniffer-maven-plugin</artifactId>
-        <version>${animal-sniffer.version}</version>
-        <configuration>
-          <signature>
-            <groupId>org.codehaus.mojo.signature</groupId>
-            <artifactId>java18</artifactId>
-            <version>1.0</version>
-          </signature>
-        </configuration>
-        <executions>
-          <execution>
-            <id>ensure-java-1.6-class-library</id>
-            <phase>test</phase>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
         <version>3.3.1</version>
@@ -823,7 +815,8 @@
         <module>querydsl-maven-plugin</module>
         <module>querydsl-jpa</module>
         <module>querydsl-jpa-codegen</module>
-        <module>querydsl-jdo</module>
+        <!-- datanucleus core seems to be incompatible with modern java: Unsupported class file major version 65 -->
+        <!--<module>querydsl-jdo</module>-->
         <module>querydsl-bom</module>
         <module>querydsl-kotlin-codegen</module>
 
@@ -978,21 +971,6 @@
           DB2*
         </surefire.excludes>
       </properties>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <disableXmlReport>true</disableXmlReport>
-              <printSummary>false</printSummary>
-              <jdkToolchain>
-                <version>${latest.java.version}</version>
-              </jdkToolchain>
-           </configuration>
-          </plugin>
-        </plugins>
-      </build>
     </profile>
     <profile>
       <id>quickbuild</id>
